# pypi-test-package

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/safedep_test_pkg/: __init__.py
