[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "safedep-test-pkg"
dynamic = ["version"]
description = "Empty test package for PyPI registry testing"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Write a generated version file for runtime __version__
write_to = "src/safedep_test_pkg/_version.py"
# Match tags like v0.0.4
tag_regex = '^v(?P<version>\d+\.\d+\.\d+)$'
